add icons, times, fix rain display (rounding)